--- a/phpBB/styles/prosilver/theme/buttons.css
+++ b/phpBB/styles/prosilver/theme/buttons.css
@@ -134,13 +134,17 @@ ul.profile-icons li {
 
 ul.profile-icons li.no-icon,
 ul.profile-icons li.edit-icon,
-ul.profile-icons li.quote-icon {
+ul.profile-icons li.quote-icon,
+ul.profile-icons li.pm-icon {
 	float: left;
-	margin: 0 6px 3px 0;
 	height: 20px;
 	background-repeat: no-repeat;
 	background-position: 100% -340px;
 	background-image: url("./images/buttons_sprites.png");
+}
+
+ul.profile-icons li.pm-icon {
+	background-position: 100% -540px;
 }
 
 /* Rolloff state */
@@ -152,7 +156,8 @@ ul.profile-icons li a {
 
 ul.profile-icons li.no-icon a,
 ul.profile-icons li.edit-icon a,
-ul.profile-icons li.quote-icon a {
+ul.profile-icons li.quote-icon a,
+ul.profile-icons li.pm-icon a {
 	display: block;
 	height: 100%;
 	background-color: transparent;
@@ -166,7 +171,8 @@ ul.profile-icons li.quote-icon a {
 
 ul.profile-icons li.no-icon a:hover,
 ul.profile-icons li.edit-icon a:hover,
-ul.profile-icons li.quote-icon a:hover {
+ul.profile-icons li.quote-icon a:hover,
+ul.profile-icons li.pm-icon a:hover {
 	background-color: transparent;
 	background-image: url("./images/buttons_sprites.png");
 	background-repeat: no-repeat;
@@ -174,7 +180,8 @@ ul.profile-icons li.quote-icon a:hover {
 
 ul.profile-icons li.no-icon a span,
 ul.profile-icons li.edit-icon a span,
-ul.profile-icons li.quote-icon a span {
+ul.profile-icons li.quote-icon a span,
+ul.profile-icons li.pm-icon a span {
 	cursor: pointer;
 	display: block;
 	height: 100%;
@@ -186,6 +193,12 @@ ul.profile-icons li.quote-icon a span {
 	background-repeat: repeat-x;
 }
 
+ul.profile-icons li.pm-icon a span {
+	background-position: 50% -90px;
+	margin: 0 4px 0 13px; /* left and right background */
+	padding: 0 0 0 1px;
+}
+
 /* smaller margin for the asterix and without an icon */
 ul.profile-icons li.no-icon a span,
 ul.profile-icons li.edit-icon a span {
@@ -195,13 +208,21 @@ ul.profile-icons li.edit-icon a span {
 ul.profile-icons li.no-icon:hover a span,
 ul.profile-icons li.edit-icon:hover a span,
 ul.profile-icons li.quote-icon:hover a span {
-	background-position: 0 -70px;
+	background-position: 50% -70px;
+}
+
+ul.profile-icons li.pm-icon:hover a span {
+	background-position: 50% -110px;
 }
 
 ul.profile-icons li.no-icon:hover,
 ul.profile-icons li.edit-icon:hover,
 ul.profile-icons li.quote-icon:hover {
 	background-position: 100% -360px;
+}
+
+ul.profile-icons li.pm-icon:hover {
+	background-position: 100% -560px;
 }
 
 ul.profile-icons li.no-icon a {
@@ -224,6 +245,14 @@ ul.profile-icons li.quote-icon a {
 ul.profile-icons li.quote-icon:hover a {
 	background-position: 0 -440px;
 }
+
+ul.profile-icons li.pm-icon a {
+	background-position: 0 -500px;
+}
+ul.profile-icons li.pm-icon:hover a {
+	background-position: 0 -520px;
+}
+ul.profile-icons li.pm-icon a * { font-weight: bold; }
 
 ul.profile-icons li.no-icon a span,
 ul.profile-icons li.edit-icon a span,
@@ -254,7 +283,6 @@ ul.profile-icons li a:hover { background: none; }
 .msnm-icon, .msnm-icon a			{ background: none top left no-repeat; }
 .icq-icon, .icq-icon a			{ background: none top left no-repeat; }
 .jabber-icon, .jabber-icon a		{ background: none top left no-repeat; }
-.pm-icon, .pm-icon a				{ background: none top left no-repeat; }
 
 /* Moderator icons */
 .report-icon, .report-icon a		{ background: none top left no-repeat; }
@@ -270,7 +298,6 @@ ul.profile-icons li.web-icon	{ width: 20px; height: 20px; }
 ul.profile-icons li.msnm-icon	{ width: 20px; height: 20px; }
 ul.profile-icons li.icq-icon	{ width: 20px; height: 20px; }
 ul.profile-icons li.jabber-icon	{ width: 20px; height: 20px; }
-ul.profile-icons li.pm-icon		{ width: 28px; height: 20px; }
 ul.profile-icons li.report-icon	{ width: 20px; height: 20px; }
 ul.profile-icons li.delete-icon	{ width: 20px; height: 20px; }
 ul.profile-icons li.info-icon	{ width: 20px; height: 20px; }
