--- a/tests/template/templates/loop_nested_deep_multilevel_ref.html
+++ b/tests/template/templates/loop_nested_deep_multilevel_ref.html
@@ -2,10 +2,11 @@ top-level content
 <!-- BEGIN outer -->
 	outer
 	<!-- BEGIN middle -->
+		{outer.middle.S_BLOCK_NAME}
 		<!-- BEGIN inner -->
 			inner {inner.VARIABLE}
 			<!-- IF outer.middle.inner.S_FIRST_ROW -->
-				first row
+				first row of {outer.middle.inner.S_NUM_ROWS} in {middle.inner.S_BLOCK_NAME}
 			<!-- ENDIF -->
 		<!-- END inner -->
 	<!-- END middle -->
