--- a/phpBB/styles/prosilver/template/simple_footer.html
+++ b/phpBB/styles/prosilver/template/simple_footer.html
@@ -7,7 +7,7 @@
 </div>
 
 <script type="text/javascript" src="{T_JQUERY_LINK}"></script>
-<!-- IF S_JQUERY_FALLBACK --><script type="text/javascript">window.jQuery || document.write(unescape('%3Cscript src="{T_ASSETS_PATH}/javascript/jquery.js" type="text/javascript"%3E%3C/script%3E'));</script><!-- ENDIF -->
+<!-- IF S_JQUERY_FALLBACK --><script type="text/javascript">window.jQuery || document.write('<script src="{T_ASSETS_PATH}/javascript/jquery.js"><\/script>')</script><!-- ENDIF -->
 
 </body>
 </html>
