[feature/ckeditor] Move files around in CKEditor to make it easier to configure
* Config is now in a different file then the one provided by CKEditor. This
makes it easier to update CKEditor.
* Themes can define/create skins for the editor

PHPBB3-10418

--- a/phpBB/styles/prosilver/template/overall_footer.html
+++ b/phpBB/styles/prosilver/template/overall_footer.html
@@ -36,7 +36,7 @@
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/ckeditor/ckeditor.js"></script>
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/ckeditor/adapters/jquery.js"></script>
-<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/ckeditor/setup.js"></script>
+<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/editor.js"></script>
 
 </body>
 </html>
