--- a/phpBB/styles/prosilver/template/overall_header.html
+++ b/phpBB/styles/prosilver/template/overall_header.html
@@ -30,6 +30,16 @@
 
 <script type="text/javascript">
 // <![CDATA[
+	var phpbb = {
+		content_direction : "{S_CONTENT_DIRECTION}",
+		user_lang : "{S_USER_LANG}",
+		
+		board_url : "{BOARD_URL}",
+		root_path : "{ROOT_PATH}",
+		theme_path : "{T_THEME_PATH}",
+		template_path : "{T_TEMPLATE_PATH}"
+	};
+	
 	var jump_page = '{LA_JUMP_PAGE}:';
 	var on_page = '{ON_PAGE}';
 	var per_page = '{PER_PAGE}';
