--- a/phpBB/styles/prosilver/template/ucp_prefs_post.html
+++ b/phpBB/styles/prosilver/template/ucp_prefs_post.html
@@ -9,10 +9,10 @@
 	<fieldset>
 	<!-- IF ERROR --><p class="error">{ERROR}</p><!-- ENDIF -->
 	<dl>
-		<dt><label for="wysiwyg1">{L_EDITOR_INTERFACE}:</label></dt>
+		<dt><label for="rich_text1">{L_EDITOR_INTERFACE}:</label></dt>
 		<dd>
-			<label for="wysiwyg1"><input type="radio" name="wysiwyg" id="wysiwyg1" value="1"<!-- IF S_WYSIWYG --> checked="checked"<!-- ENDIF --> /> {L_WYSIWYG}</label>
-			<label for="wysiwyg0"><input type="radio" name="wysiwyg" id="wysiwyg0" value="0"<!-- IF not S_WYSIWYG --> checked="checked"<!-- ENDIF --> /> {L_SIMPLE}</label>
+			<label for="rich_text1"><input type="radio" name="rich_text" id="rich_text1" value="1"<!-- IF S_RICH_TEXT --> checked="checked"<!-- ENDIF --> /> {L_RICH_TEXT_EDITOR}</label>
+			<label for="rich_text0"><input type="radio" name="rich_text" id="rich_text0" value="0"<!-- IF not S_RICH_TEXT --> checked="checked"<!-- ENDIF --> /> {L_SIMPLE}</label>
 		</dd>
 	</dl>
 	<dl>
