[PHPBB3-10254] Remove subsilver2 as default style on theme.

--- a/phpBB/styles/subsilver2/theme/stylesheet.css
+++ b/phpBB/styles/subsilver2/theme/stylesheet.css
@@ -1,6 +1,6 @@
 /*  phpBB3 Style Sheet
     --------------------------------------------------------------
-	Style name:			subsilver2 (the default phpBB 3.0.x style)
+	Style name:			subsilver2
 	Based on style:		subSilver (the default phpBB 2.0.x style)
 	Original author:	Tom Beddard ( http://www.subblue.com/ )
 	Modified by:		phpBB Group ( http://www.phpbb.com/ )
