--- a/phpBB/styles/prosilver/theme/cp.css
+++ b/phpBB/styles/prosilver/theme/cp.css
@@ -349,31 +349,10 @@ dl.mini dd {
 }
 
 /* PM panel adjustments */
-.pm-panel-header {
-	margin: 0; 
-	padding-bottom: 10px; 
-	border-bottom: 1px dashed #A4B3BF;
-}
-
 .reply-all {
-	display: block; 
-	padding-top: 4px; 
-	clear: both;
-	float: left;
-}
-
-.pm-panel-message {
-	padding-top: 10px;
-}
-
-.pm-return-to {
-	padding-top: 23px;
-}
-
-#cp-main .pm-message-nav {
-	margin: 0; 
-	padding: 2px 10px 5px 10px; 
-	border-bottom: 1px dashed #A4B3BF;
+	margin-bottom: -60px;
+	position: absolute;
+	margin-left: 200px;
 }
 
 /* PM Message history */
