[ticket/10453] PM viewmessage page is misplacing the online icon
Removed the position: absolute value, and made it so that if the
buttons are bigger the text move with it, also added support for
bidi.css (text right to left).

PHPBB3-10453

http://tracker.phpbb.com/browse/PHPBB3-10453

--- a/phpBB/styles/prosilver/theme/cp.css
+++ b/phpBB/styles/prosilver/theme/cp.css
@@ -349,10 +349,17 @@ dl.mini dd {
 }
 
 /* PM panel adjustments */
+.reply-all a.left {
+	background-position: 3px 60%;
+}
+
+.reply-all a.left:hover {
+	background-position: 0px 60%;
+}
+
 .reply-all {
-	margin-bottom: -60px;
-	position: absolute;
-	margin-left: 200px;
+    font-size: 11px;
+	padding-top: 5px;
 }
 
 /* PM Message history */
