[ticket/10504] Revert the changes for widescreen optimisation PHPBB3-10485
Revert "[ticket/10485] Fix invalid HTML5 markup introduced in PHPBB3-6632"

This reverts commit c67633577f276727e1d15106a87517b97c8a4d1a.

PHPBB3-6632
PHPBB3-10485
PHPBB3-10504

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -29,19 +29,14 @@ ul.topiclist li.row dl {
 ul.topiclist dt {
 	display: block;
 	float: left;
-	width: 50%;
+	width: 100%;
 	font-size: 1.1em;
 	padding-left: 5px;
 	padding-right: 5px;
-}
-
-ul.topiclist .widescreen-optimised dt {
-	width: 100%;
 	margin-right: -465px;
 }
 
-ul.topiclist .widescreen-optimised dt .wrap-content {
-	display: block;
+ul.topiclist dt .wrap-content {
 	padding-right: 465px;
 }
 
@@ -106,9 +101,6 @@ li.header dt, li.header dd {
 
 li.header dt {
 	font-weight: bold;
-}
-
-li.header .widescreen-optimised dt {
 	margin-right: -465px;
 }
 
