[ticket/10504] Revert the changes for widescreen optimisation PHPBB3-10408
Revert "[ticket/10408] Layout of topics/attachments list is broken in UCP and
MCP"

This reverts commit 88aacd0f2cffdf75af71d749c6ea602ed3912651.

PHPBB3-6632
PHPBB3-10408
PHPBB3-10504

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -184,7 +184,7 @@ dd.extra {
 
 dd.mark {
 	float: right !important;
-	width: 90px;
+	width: 9%;
 	text-align: center;
 	line-height: 200%;
 	font-size: 1.2em;
