[ticket/10521] Use request class and $_EXTRA_URL
PHPBB3-10521

--- a/phpBB/styles/prosilver/template/overall_header.html
+++ b/phpBB/styles/prosilver/template/overall_header.html
@@ -116,7 +116,7 @@
 				<p>{SITE_DESCRIPTION}</p>
 				<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
 			</div>
-		<!-- IF S_LANG_SELECT -->
+		<!-- IF .lang_select -->
 			<div id="lang-select">
 				<form action="{U_INDEX}" method="get" id="lang">
 					<select name="lang" onchange="window.location.href = add_to_query('lang', this.value);">
