--- a/phpBB/styles/prosilver/template/ucp_profile_reg_details.html
+++ b/phpBB/styles/prosilver/template/ucp_profile_reg_details.html
@@ -53,6 +53,21 @@
 	<span class="corners-bottom"><span></span></span></div>
 </div>
 
+<!-- IF DELETE_ACCOUNT_ALLOWED -->
+<div class="panel">
+	<div class="inner"><span class="corners-top"><span></span></span>
+
+	<fieldset>
+	<dl>
+		<dt><label for="delete_account">{L_DELETE_ACCOUNT}:</label><br /><span>{L_DELETE_ACCOUNT_EXPLAIN}</span></dt><!-- This language variable is dynamically assigned to an existing variable. It doesn't actually exist itself -->
+		<dd><input type="checkbox" name="delete_account" id="delete_account" title="{L_DELETE_ACCOUNT}" /></dd>
+	</dl>
+	</fieldset>
+
+	<span class="corners-bottom"><span></span></span></div>
+</div>
+<!-- ENDIF -->
+
 <fieldset class="submit-buttons">
 	{S_HIDDEN_FIELDS}<input type="reset" value="{L_RESET}" name="reset" class="button2" />&nbsp; 
 	<input type="submit" name="submit" value="{L_SUBMIT}" class="button1" />
