[ticket/10521] Consolidated code. Still needs some testing
PHPBB3-10521

--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -133,6 +133,19 @@ a#logo:hover {
 	text-decoration: none;
 }
 
+/* Language selection box
+--------------------------------------------- */
+#lang-select {
+	color: #FFFFFF;
+	position: relative;
+	margin-top: 30px;
+	margin-right: 5px;
+	display: block;
+	float: left;
+	text-align: right;
+	white-space: nowrap; /* For Opera */
+}
+
 /* Search box
 --------------------------------------------- */
 #search-box {
