--- a/phpBB/styles/prosilver/template/overall_header.html
+++ b/phpBB/styles/prosilver/template/overall_header.html
@@ -52,7 +52,7 @@
 		popup(url, 760, 570, '_usersearch');
 		return false;
 	}
-	
+
 	/**
 	* Add item to current URL query string
 	*/
@@ -116,17 +116,18 @@
 				<p>{SITE_DESCRIPTION}</p>
 				<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
 			</div>
-		<!-- IF .lang_select -->
+
+		<!-- IF LANGUAGE_OPTIONS -->
 			<div id="lang-select">
 				<form action="{U_INDEX}" method="get" id="lang">
 					<select name="lang" onchange="window.location.href = add_to_query('lang', this.value);">
-						<!-- BEGIN lang_select -->
-							<option value="{lang_select.LANG_ISO}"{lang_select.LANG_SELECTED}>{lang_select.LANG_NAME}</option>
-						<!-- END lang_select -->
+						{LANGUAGE_OPTIONS}
 					</select>
+					<noscript><input type="submit" action="{U_ACTION}"></noscript>
 				</form>
 			</div>
 		<!-- ENDIF -->
+
 		<!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
 			<div id="search-box">
 				<form action="{U_SEARCH}" method="get" id="search">
