[feature/userdelete] Added S_ prefix to template variable
PHPBB3-9621

--- a/phpBB/styles/prosilver/template/ucp_profile_reg_details.html
+++ b/phpBB/styles/prosilver/template/ucp_profile_reg_details.html
@@ -53,7 +53,7 @@
 	<span class="corners-bottom"><span></span></span></div>
 </div>
 
-<!-- IF DELETE_ACCOUNT_ALLOWED -->
+<!-- IF S_DELETE_ACCOUNT_ALLOWED -->
 <div class="panel">
 	<div class="inner"><span class="corners-top"><span></span></span>
 
