[feature/ajax] Fix filter check, quick mod tools data-attribute
PHPBB3-10270

--- a/phpBB/styles/prosilver/template/viewtopic_body.html
+++ b/phpBB/styles/prosilver/template/viewtopic_body.html
@@ -263,7 +263,7 @@
 <!-- INCLUDE jumpbox.html -->
 
 <!-- IF .quickmod -->
-	<form method="post" action="{S_MOD_ACTION}" id="quickmodform">
+	<form method="post" action="{S_MOD_ACTION}" id="quickmodform" data-ajax="true">
 	<fieldset class="quickmod">
 		<label for="quick-mod-select">{L_QUICK_MOD}:</label>
 		<select name="action" id="quick-mod-select">
