[feature/ajax] Fix filter check, quick mod tools data-attribute

--- a/phpBB/styles/prosilver/template/viewtopic_body.html
+++ b/phpBB/styles/prosilver/template/viewtopic_body.html
@@ -263,7 +263,7 @@
 <!-- INCLUDE jumpbox.html -->
 
 <!-- IF S_TOPIC_MOD -->
-	<form method="post" action="{S_MOD_ACTION}" id="quickmodform">
+	<form method="post" action="{S_MOD_ACTION}" id="quickmodform" data-ajax="true">
 	<fieldset class="quickmod">
 		<label for="quick-mod-select">{L_QUICK_MOD}:</label> {S_TOPIC_MOD} <input type="submit" value="{L_GO}" class="button2" />
 		{S_FORM_TOKEN}
